优化注释